@@ -1,5 +1,16 @@
 #!/bin/bash
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
-cd $DIR
+
 export MALLOC_CHECK_=0
-java -jar trader-main-1.0.0.jar >> ../../logs/trader.out 2>&1 &
+
+if [[ -z "${JVM_OPTS}" ]]; then
+    JVM_OPTS="-Xms1g -Xmx1g -XX:+UseG1GC -XX:+UseStringDeduplication"
+fi
+
+$JAVA_HOME/bin/java $JVM_OPTS\
+    --add-opens java.base/java.nio=ALL-UNNAMED\
+    --add-opens java.base/java.lang=ALL-UNNAMED\
+    --add-opens java.base/java.lang.invoke=ALL-UNNAMED\
+    --add-opens java.base/java.lang.reflect=ALL-UNNAMED\
+    --add-opens java.base/java.net=ALL-UNNAMED\
+    -jar $DIR/trader-services*.jar "$@"
